# OGLEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FindDirsCmakeFile.cmake
include/: GameScene.h  TitleScreen.h  app.h  inputHandler.h  log.h  material.h  mesh.h  renderer.h  scene.h  shader.h  stb_image.h  texture.h
include/managers/: inputManager.h  logmanager.h  windowManager.h
include/utils/: math.h
src/: CMakelists.txt  GameScene.cpp  TitleScreen.cpp  app.cpp  main.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp
src/managers/: CMakeLists.txt  inputManager.cpp  logmanager.cpp  windowManager.cpp
src/utils/: CMakeLists.txt
test/: CMakeLists.txt
test/window/: CMakeLists.txt  main.cpp
